# innosoft_app

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  splent.manifest.json
docker/: .env.dev.example  .env.prod.example  Dockerfile.innosoft_app.dev  Dockerfile.innosoft_app.prod  docker-compose.dev.yml  docker-compose.prod.yml
entrypoints/: entrypoint.dev.sh  entrypoint.prod.sh
scripts/: 00_core_requirements_dev.sh  00_install_features.sh  01_compile_assets.sh  02_0_db_wait_connection.sh  02_1_db_create_db_test.sh  02_2_db_create_splent_migrations.sh  03_initialize_migrations.sh  04_handle_migrations.sh  05_0_start_app_dev.sh  05_1_start_app_prod.sh
src/innosoft_app/: __init__.py  config.py  errors.py  logging.py
src/innosoft_app/static/css/: own.css
src/innosoft_app/templates/: 400.html  401.html  404.html  500.html  base_template.html
