[build-system]
requires = [
    "setuptools>=80.3.1",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "innosoft_app"
version = "0.0.1"
description = "innosoft_app is an app built with SPLENT (https://www.splent.io)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "watchdog",
]
core = [
    "splent_framework",
]

[tool.splent]
cli_version = "1.11.0"
features = [
    "splent-io/splent_feature_theme",
    "splent-io/splent_feature_team",
    "splent-io/splent_feature_events",
    "splent-io/splent_feature_skin_arcade",
    "splent-io/splent_feature_auth",
    "splent-io/splent_feature_public",
    "splent-io/splent_feature_redis@v1.5.6",
    "splent-io/splent_feature_session_redis",
    "splent-io/splent_feature_nginx@v1.1.0",
    "splent-io/splent_feature_media",
]
features_dev = [
    "splent-io/splent_feature_admin",
]
features_prod = []
spl = "cms_spl"

[tool.splent.layout]
base_template = "base_template.html"
hooks = [
    "layout.head.css",
    "layout.sidebar.top",
    "layout.anonymous_sidebar",
    "layout.authenticated_sidebar",
    "layout.sidebar.authenticated.items",
    "layout.navbar.anonymous",
    "layout.navbar.authenticated",
    "layout.footer",
    "layout.scripts",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
